<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lyCustom"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edtAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_item" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:theme="@style/MyButton"
            android:src="@drawable/ic_plus_one_black_24dp"
            android:tint="@color/white"
            />

        <CheckBox
            android:text="@string/hint_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkClear"
            android:textSize="7sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="2"
            android:theme="@style/MyButton"
            android:checked="true"
            />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <EditText
            android:id="@+id/edtHowMany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/hint_howmany" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:text="@string/hint_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <TextView
            android:text="@string/hint_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:weightSum="2">

        <ListView
            android:id="@+id/listCustomAdded"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ListView
            android:id="@+id/listCustomSelected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnRandomCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_swap_calls_black_24dp"
        android:tint="@color/white"
        app:backgroundTint="@color/g1"
        />

</RelativeLayout>
