<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lyNumbers"
    >

    <LinearLayout
        android:id="@+id/lyMain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/hint_min" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


        <EditText
                android:id="@+id/edtMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/hint_max" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <EditText
            android:id="@+id/edtHowMany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/hint_howmany" />

    </android.support.design.widget.TextInputLayout>


    </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listNumbers"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/lyMain"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnRandomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/ic_swap_calls_black_24dp"
        android:tint="@color/white"
        app:backgroundTint="@color/g1"
        />

</RelativeLayout>